# scaler

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  TYPE_SAFETY_REVIEW.md  VEC3_BUG_ANALYSIS.md  benchmark_results.csv  test_vec3_bug.cc
.github/workflows/: ci.yml
benchmark/: .gitignore  CMakeLists.txt  README.md  baseline.json  baseline_original.json  benchmark_scalers.cc  profile.sh
cmake/: FetchContentExample.cmake  example_usage.cmake  scalerConfig.cmake.in
docs/: PLATFORM_SUPPORT.md  WARNING_ANALYSIS.md  cmake_integration.md
examples/: example_usage.cc  sdl_gpu_scaler_example.cc
examples/gpu_scaler/: CMakeLists.txt  app.cc  app.hh  gui.cc  gui.hh  image_loader.cc  image_loader.hh  main.cc  rotozoom_bmp.h
examples/scaler_cli/: CMakeLists.txt  scaler_cli.cc  stb_image_wrapper.hh
ext/: CMakeLists.txt
ext/doctest/: CMakeLists.txt
include/scaler/: 2xsai.hh  algorithm.hh  algorithm_capabilities.hh  buffer_policy.hh  compiler_compat.hh  eagle.hh  eagle_crtp.hh  epx.hh  float_compare.hh  hq2x.hh  hq3x.hh  image.hh  image_base.hh  omniscale.hh  scale2x_sfx.hh  scale3x.hh  scale3x_sfx.hh  scaler_common.hh  sdl_compat.hh  sdl_image.hh  sdl_scalers.hh  sliding_window_buffer.hh  types.hh  unified_scaler.hh  vec3.hh  warning_macros.hh  xbr.hh
include/scaler/cpu/: 2xsai.hh  aascale.hh  bilinear.hh  buffer_policy.hh  eagle.hh  epx.hh  hq2x.hh  hq3x.hh  omniscale.hh  scale2x_sfx.hh  scale3x.hh  scale3x_sfx.hh  scaler_common.hh  sliding_window_buffer.hh  trilinear.hh  xbr.hh
include/scaler/gpu/: algorithm_traits.hh  algorithm_traits_impl.hh  gpu_exceptions.hh  opengl_texture_scaler.hh  opengl_utils.hh  platform_info.hh  sdl_opengl_multi_scaler.hh  shader_cache.hh  shader_source.hh  texture_ref.hh  unified_gpu_scaler.hh
include/scaler/gpu/sdl/: sdl_texture_adapter.hh
include/scaler/sdl/: sdl_compat.hh  sdl_image.hh  sdl_scalers.hh
test/: CMakeLists.txt  generate_golden_data.cc  test_bilinear_trilinear.cc  test_main.cc  test_platform_config.cc  test_sliding_window_buffer.cc  test_unified_algorithms.cc  test_unified_cpu_gpu.cc  test_unified_preallocated.cc
test/data/: golden_test_pattern_eagle.h  golden_test_pattern_epx.h  golden_test_pattern_xbr.h  rotozoom_bmp.h  rotozoom_original_bmp.h
tools/: CMakeLists.txt  bmp_to_header.py  scaler_cli.cc
unittest/: CMakeLists.txt  generate_golden_data.cc  golden_test_pattern_2xsai.h  golden_test_pattern_eagle.h  golden_test_pattern_epx.h  golden_test_pattern_hq2x.h  golden_test_pattern_source.h  golden_test_pattern_xbr.h  gpu_test_context.hh  gpu_test_helper.hh  sdl_opengl_multi_scaler_compat.hh  test_algorithm_correctness.cc  test_bilinear_trilinear.cc  test_common.hh  test_crtp.cc  test_golden_data.cc  test_gpu_algorithms_fidelity.cc  test_gpu_epx.cc  test_gpu_simple.cc  test_hq3x_exact_golden.cc  test_hq3x_golden.cc  test_main.cc  test_omniscale_golden.cc  test_original_vs_crtp.cc  test_platform_config.cc  test_scale_algorithms.cc  test_scalers_comprehensive.cc  test_sdl_interface.cc  test_sliding_window_buffer.cc  test_unified_algorithms.cc  test_unified_gpu.cc  test_unified_scaler.cc  test_xbr_hq2x.cc  unified_test_framework.hh
unittest/data/: golden_test_pattern_2xsai.h  golden_test_pattern_hq2x.h  golden_test_pattern_source.h  rotozoom_input.h
